<resources>
    <string name="app_name">Memory_Map</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to">Sign Up to Memory Map</string>
    <string name="id">ID</string>
    <string name="pw">Password</string>
    <string name="username">Nickname</string>
    <string name="email">E-mail</string>
    <string name="create">Sign up</string>
    <string name="login">Sign in</string>
    <string name="memorymap">MEMORY MAP</string>
    <string name="location_input">나는 지금 어디에 있나요?</string>
    <string name="save_record">Save Record</string>
    <string name="edit_text">Edit text</string>
    <string name="map_intro">Add marker to map\nand record your trip</string>
    <string name="record_user">\'s MMAP log</string>
    <string name="setting_language">Language</string>
    <string name="setting_notice">Notification</string>
    <string name="setting_logout">Logout from this device</string>
    <string name="setting_delete">Delete account</string>
    <string name="setting_warning">Warning : You can\'t restore your account if you delete.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
